fix discover link destination

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -77,7 +77,7 @@ _%>
 <div class="discover-row">
   <div class="content-container">
     <p class="discover-heading">
-      <a href="https://docs.opencollective.foundation/" target="_blank">
+      <a href="https://discover.opencollective.com/foundation" target="_blank">
         Discover more Collectives hosted by us!
       </a>
     </p>
