Have count include funds
not only collectives

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -28,7 +28,7 @@ _%>
             sizes: '100vw' 
           }, [428]); %>
         <% } %>
-        and <%= hostedCollectives.length - 1 %>
+        and <%= collectivesAndFundsCount - 1 %>
         more groups
       </h1>
 
@@ -82,7 +82,7 @@ _%>
       </a>
     </p>
     <p>
-      Discover <%= hostedCollectives.length %> Collectives making an impact in mutual aid, civil tech, arts & culture, climate and more.
+      Discover <%= collectivesAndFundsCount %> Collectives making an impact in mutual aid, civil tech, arts & culture, climate and more.
     </p>
   </div>
 </div>
