--- a/src/_includes/footer.ejs
+++ b/src/_includes/footer.ejs
@@ -5,8 +5,8 @@
     <p>We offer <strong>nonprofit status + fundraising + accounting software to aligned groups.</strong></p>
     <address class="address">
       Open Collective Foundation 501(c)(3)
-      340 S. Lemon Avenue, #3717
-      Walnut, CA 91789
+      440 N. Barranca Avenue #3717
+      Covina, CA 91723
       EIN 81-4004928
       DLN 17053184327027
     </address>
