Feat: Add text to Compensation page
This adds some text that points to links for the compensation page, so that the proper context can be used.

See https://opencollective.slack.com/archives/C7U3AD29F/p1682013453635229\?thread_ts\=1682012205.950819\&cid\=C7U3AD29F

--- a/src/compensation-frame/index.ejs
+++ b/src/compensation-frame/index.ejs
@@ -23,6 +23,7 @@
     <div id="app">
       <div class="inputs-container">
         <h1>Compensation Calculator</h1>
+        <p class="text">For more context, read <a href="https://blog.opencollective.com/team-set-salaries-ocf/">this post on how OCF sets salaries</a> and <a href="https://blog.opencollective.com/ocfs-journey-to-a-new-compensation-model/">this post on our journey of compensation</a>.</p>
         <label> Classification </label>
         <div class="q-gutter-sm q-mb-lg q-mt-md">
           <q-radio
